--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
