--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
   http: ^1.3.0
+  shared_preferences: ^2.4.0
 
 dev_dependencies:
   flutter_test:
