--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.3.0
   shared_preferences: ^2.5.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
