--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.2
   url_launcher: ^6.1.14
   photo_view: ^0.15.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
